# yalog

./: CMakeLists.txt  LICENSE  README.md
example/: CMakeLists.txt  main.cpp
include/: yalog.h
src/: CMakeLists.txt  yalog.cpp
